<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/shape_cell"
			android:clickable="true"
			android:layout_margin="10dp"
			android:onClick="callPhone"
			android:orientation="vertical"
			android:tag="01">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/username01" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/relation01" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/phone01" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/shape_cell"
			android:clickable="true"
			android:layout_margin="10dp"
			android:onClick="callPhone"
			android:orientation="vertical"
			android:tag="02">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/username02" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/relation02" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/phone02" />

		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/shape_cell"
			android:clickable="true"
			android:layout_margin="10dp"
			android:onClick="callPhone"
			android:orientation="vertical"
			android:tag="03">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/username03" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/relation03" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/phone03" />

		</LinearLayout>


	</LinearLayout>


</android.support.constraint.ConstraintLayout>